<resources>
    <string name="app_name">MedHelp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bt_form_hint_expiration">Expiration Date</string>
    <string name="menu_home">Med Help</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Purchase History</string>
    <string name="bt_expiration_required">Expiration date is required</string>
    <string name="bt_expiration_invalid">Expiration date is invalid</string>
    <string name="menu_option">Menu</string>
    <string name="profile_option">Profile</string>
    <string name="purchse_option">Purchase History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credit_debit_card_number">Credit/Debit Card Number</string>
    <string name="payment_page">Payment Info</string>

    <string name="please_enter_first_name">Please enter your first name</string>
    <string name="please_enter_last_name">Please enter your last name</string>
    <string name="base_url">https://maps.googleapis.com</string>
    <string name="invalid_card_number">Invalid credit card number</string>
    <string name="invalid_expiration_date">Invalid MM/YY exp. date</string>
    <string name="invalid_cvv">Invalid security code</string>
    <string name="title_activity_maps">Map</string>
    <string name="success_with_status">Success with status : %1$s</string>
    <string name="direction_requesting">Direction Requesting...</string>
    <string name="success_with_empty">Success with empty result</string>
    <string name="medicalnews">Medical News</string>

</resources>